# lgtbot-ElainaBot_v2

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DEPLOY.md  LGTBot_ElainaBot.cc  README.md  build.sh  lgtbot_qq.cc  main.py
.github/workflows/: cmake.yml  update-lgtbot.yml
app/: __init__.py  boot.py  buttons.py  callbacks.py  config.py  dispatcher.py  helpers.py  log_attribution.py  quota.py  state.py  uploader.py  userdb.py
app/webui/: __init__.py  main.py  message_log.py  page_logs.py  page_users.py
app/webui/templates/logs/: logs.html
app/webui/templates/main/: main.css  main.html  main.js
app/webui/templates/users/: users.html  users.js
mod/: __init__.py  boot.py  buttons.py  callbacks.py  dispatcher.py  helpers.py  quota.py  state.py  uploader.py  userdb.py
mod/webui/: message_log.py  page_users.py
mod/webui/templates/logs/: logs.js
mod/webui/templates/users/: users.html  users.js
